--- a/sass/config/_base.scss
+++ b/sass/config/_base.scss
@@ -24,6 +24,7 @@
   --white: #fff;
   --black: #222;
   --cyan: #01fdc2;
+  --cyan1: #abf1e1;
 
   /* fonts default */
   --heading: 'Montserrat', 'Poppins', 'Lato', sans-serif;
@@ -39,7 +40,7 @@
   --fixed-width: 60rem;
   --small: 1.3rem;
 
-  --shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
+  --shadow-1: 0 1px 2px 0 rgba(0, 0, 0, 0.1),
     0 1px 2px 0 rgba(208, 201, 201, 0.06);
 
   --shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
