--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,9 +8,12 @@
 @import 'components/demopageview';
 
 @import 'routes/Header';
+@import 'routes/Footer';
 
 @import 'views/LandingPage/TopDisplaySec';
 @import 'views/LandingPage/SubjectAreaSec';
 @import 'views/LandingPage/FeaturedCoursesSec';
+@import 'views/LandingPage/expLearning';
+@import 'views/LandingPage/topFaq';
 
 @import 'views/primary/error';
