--- a/sass/components/_demopageview.scss
+++ b/sass/components/_demopageview.scss
@@ -1,12 +1,37 @@
-.demopageview{
-    height: 60vh;
-    margin: 2rem auto;
-    max-width: 80%;
+.demopageview {
+  // height: 80vh;
+  margin: 4rem auto;
+  max-width: 80%;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 80vh;
+  gap: 2rem;
+
+  align-content: center;
+  justify-content: center;
+  background-color: var(--white);
+  // margin: 4rem;
+
+  @include respond(ebook) {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, min-content);
+    justify-content: center;
+    align-content: center;
+  }
+  .tobring {
+    margin-bottom: 3rem;
+    color: var(--pink);
+    border-bottom: 1px solid #000;
+  }
+  .textnote {
+    padding: 0 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #d7d3d3;
-    padding: 3rem;
-
+    .soon {
+      margin-bottom: 5rem;
+    }
+  }
 }
