--- a/sass/config/_reset.scss
+++ b/sass/config/_reset.scss
@@ -122,10 +122,10 @@ button {
 
 /* NAVLINK */
 .nav-link {
-  color: var(--grey-500);
+  color: var(--grey-700);
 }
 .nav-link:hover {
-  border-bottom: 2px #5a5757 solid;
+  border-bottom: 2px #4708f3 solid;
 }
 
 /* NAVLINK */
