--- a/sass/config/_sprite-icons.scss
+++ b/sass/config/_sprite-icons.scss
@@ -19,10 +19,39 @@
 .expressive-icon {
   width: 7rem;
   height: 7rem;
-  
-  &-all{
-    stroke-width: .5;
+
+  &-all {
+    stroke-width: 0.5;
     stroke: var(--cyan);
     fill: var(--grey-200);
+  }
+}
+
+.footer-icon {
+  width: 6rem;
+  height: 4rem;
+
+  .icon-youtube2 {
+    fill: var(--white);
+  }
+  .icon-telegram {
+    fill: var(--cyan);
+  }
+  .icon-facebook2 {
+    fill: var(--blue-500);
+  }
+
+}
+.footer-icon-contect {
+  width: 4rem;
+  height: 3rem;
+    .icon-chat {
+    fill: var(--cyan1);
+  }
+  .icon-phone {
+    fill: var(--cyan1);
+  }
+  .icon-envelop {
+    fill: var(--cyan1);
   }
 }
