--- a/sass/components/_demopageview.scss
+++ b/sass/components/_demopageview.scss
@@ -35,3 +35,10 @@
     }
   }
 }
+.gotohome {
+  margin-top: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 3rem;
+}
